--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /Gruppuppgift/.vs/Gruppuppgift/CopilotIndices/17.14.1091.29919
 /Gruppuppgift/.vs/Gruppuppgift/v17
 *.vsidx
+/.vs/GruppUppgiftGit/v17
+/Gruppuppgift/.vs/Gruppuppgift/CopilotIndices/17.14.1290.42047
+*.v2
