--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Gruppuppgift/.vs/Gruppuppgift/CopilotIndices/17.14.1091.29919
 /Gruppuppgift/.vs/Gruppuppgift/v17
 *.vsidx
+/.vs/GruppUppgift16-1/v17
